plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'com.vaadin' version '24.1.10'
}

group = 'cn.korostudio.mc'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

compileJava {
    options.compilerArgs.add('--enable-preview')
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://maven.vaadin.com/vaadin-addons'}
    maven { url 'https://jitpack.io' }
    mavenLocal()
}

ext {
    set('vaadinVersion', "24.1.10")
}

dependencies {

    implementation 'cn.hutool:hutool-all:5.8.22'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'com.vaadin:vaadin-spring-boot-starter'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    implementation 'org.parttio:line-awesome:1.1.0'

    implementation 'org.vaadin.addons.maxime:markdown-area:2.0.0'
    implementation 'com.flowingcode.vaadin.addons:zoomist-addon:1.0.0'
    implementation 'com.github.KenRouKoro:ctoml4j:1.0.1'

}

dependencyManagement {
    imports {
        mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
